--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
 PORT = "5000"
 CONNECTION_URL = "Mogo db url"
-JWT_SERET = "Htis could be anything like test
+JWT_SERET = "This could be anything like test"
+USER = "gmail ID of the sender"
+PASS = "app password of the sender's gmail id"
